# reaction-picker

./: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
icons/: index.ts
icons/Arrow/: IconArrowArrowCircleDown.tsx  IconArrowArrowCircleDownRight.tsx  IconArrowArrowCircleLeft.tsx  IconArrowArrowCircleRight.tsx  IconArrowArrowDownLeftLg.tsx  IconArrowArrowDownLeftSm.tsx  IconArrowArrowDownLg.tsx  IconArrowArrowDownMd.tsx  IconArrowArrowDownRightMd.tsx  IconArrowArrowDownRightSm.tsx  (+92 more)
src/: App.tsx  bindings.ts  consts.ts  index.css  index.tsx  store.tsx  utils.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2026-03-06-205856-0000_init/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/bridge/: dto.rs  mod.rs
src-tauri/src/commands/: get.rs  mod.rs  util.rs
src-tauri/src/commands/create/: mod.rs  snippet.rs  tag.rs
src-tauri/src/commands/get/: audio.rs  general_stats.rs  images.rs  mod.rs  settings.rs  snippets.rs  tags.rs  videos.rs
src-tauri/src/commands/remove/: delete.rs  mod.rs  tag.rs
src-tauri/src/commands/update/: audio.rs  image.rs  mod.rs  settings.rs  snippet.rs  tag.rs  video.rs
src-tauri/src/commands/util/: copy.rs  drop_files.rs  mod.rs  sync_data.rs
src-tauri/src/database/: connection.rs  mod.rs  types.rs
src-tauri/src/database/entities/: audio.rs  audio_tag.rs  image.rs  image_tag.rs  mod.rs  setting.rs  snippet.rs  snippet_tag.rs  tag.rs  video.rs  video_tag.rs
src-tauri/src/utils/: db.rs  fs.rs
(+1162 files in other folders)
